# cmd/docs/swagger.json
@@ -244,49 +244,6 @@
                 }
             }
         },
-        "/admin/image-crop": {
-            "post": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "Croping Image",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Image"
-                ],
-                "summary": "Croping Added Images",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "image-id",
-                        "name": "image_id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    }
-                }
-            }
-        },
         "/admin/offer/category-offer": {
             "post": {
                 "security": [
@@ -347,7 +304,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin Offer Management"
+                    "Admin Coupon Management"
                 ],
                 "summary": "Get coupon details",
                 "responses": {
@@ -379,7 +336,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin Offer Management"
+                    "Admin Coupon Management"
                 ],
                 "summary": "Add  a new coupon by Admin",
                 "parameters": [
@@ -424,7 +381,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin Offer Management"
+                    "Admin Coupon Management"
                 ],
                 "summary": "Expire Coupon",
                 "parameters": [
@@ -432,7 +389,7 @@
                         "type": "string",
                         "description": "Coupon id",
                         "name": "coupon_id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -453,6 +410,38 @@
             }
         },
         "/admin/offer/product-offer": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Add a new Offer for a product by specifying a limit",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin Offer Management"
+                ],
+                "summary": "Add  Product Offer",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -479,6 +468,47 @@
                         "schema": {
                             "$ref": "#/definitions/models.ProductOfferReceiver"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Add a new Offer for a product by specifying a limit",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin Offer Management"
+                ],
+                "summary": "Add  Product Offer",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -766,7 +796,7 @@
                 "tags": [
                     "Admin Product Management"
                 ],
-                "summary": "Get Products Details to users",
+                "summary": "Get Products Details",
                 "parameters": [
                     {
                         "type": "string",
@@ -1195,6 +1225,40 @@
                 }
             }
         },
+        "/referral/apply": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Apply referrals amount to order",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Checkout"
+                ],
+                "summary": "Apply referrals",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/user/address": {
             "get": {
                 "security": [
@@ -1599,40 +1663,6 @@
                 }
             }
         },
-        "/user/checkout": {
-            "get": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "Add products to carts  for the purchase",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User Order Management"
-                ],
-                "summary": "Checkout section",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    }
-                }
-            }
-        },
         "/user/coupon/apply": {
             "post": {
                 "security": [
@@ -1900,7 +1930,41 @@
                 }
             }
         },
-        "/user/place-order": {
+        "/user/order/checkout": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Add products to carts  for the purchase",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Order Management"
+                ],
+                "summary": "Checkout section",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/order/place-order": {
             "get": {
                 "security": [
                     {
@@ -2665,6 +2729,14 @@
         },
         "models.Product": {
             "type": "object",
+            "required": [
+                "category_id",
+                "description",
+                "name",
+                "price",
+                "size",
+                "stock"
+            ],
             "properties": {
                 "category_id": {
                     "type": "integer"
@@ -2690,15 +2762,11 @@
             "type": "object",
             "required": [
                 "discount_percentage",
-                "offer_limit",
                 "offer_name",
                 "product_id"
             ],
             "properties": {
                 "discount_percentage": {
-                    "type": "integer"
-                },
-                "offer_limit": {
                     "type": "integer"
                 },
                 "offer_name": {
@@ -2751,6 +2819,9 @@
                     "minLength": 6
                 },
                 "phone": {
+                    "type": "string"
+                },
+                "referral_code": {
                     "type": "string"
                 }
             }
