# handlers/offer.go
@@ -4,8 +4,8 @@ import (
 	"Zhooze/usecase"
 	"Zhooze/utils/models"
 	"Zhooze/utils/response"
-	"errors"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"github.com/go-playground/validator/v10"
@@ -20,7 +20,7 @@ import (
 // @Param coupon body models.ProductOfferReceiver true "Add new Product Offer"
 // @Success 200 {object} response.Response{}
 // @Failure 500 {object} response.Response{}
-// @Router /admin/offer/product-offer [post]
+// @Router /admin/offer/product-offer [POST]
 func AddProdcutOffer(c *gin.Context) {
 
 	var productOffer models.ProductOfferReceiver
@@ -39,11 +39,6 @@ func AddProdcutOffer(c *gin.Context) {
 	err = usecase.AddProductOffer(productOffer)
 
 	if err != nil {
-		if errors.Is(err, errors.New("the offer already exists")) {
-			errRes := response.ClientResponse(http.StatusForbidden, "could not add offers", nil, err.Error())
-			c.JSON(http.StatusForbidden, errRes)
-			return
-		}
 		errRes := response.ClientResponse(http.StatusInternalServerError, "could not add offer", nil, err.Error())
 		c.JSON(http.StatusInternalServerError, errRes)
 		return
@@ -54,16 +49,68 @@ func AddProdcutOffer(c *gin.Context) {
 
 }
 
-// @Summary Add  Category Offer
-// @Description Add a new Offer for a Category by specifying a limit
+// @Summary Add  Product Offer
+// @Description Add a new Offer for a product by specifying a limit
 // @Tags Admin Offer Management
 // @Accept json
 // @Produce json
 // @Security Bearer
-// @Param coupon body models.CategoryOfferReceiver true "Add new Category Offer"
 // @Success 200 {object} response.Response{}
 // @Failure 500 {object} response.Response{}
-// @Router /admin/offer/category-offer [post]
+// @Router /admin/offer/product-offer [GET]
+func GetProductOffer(c *gin.Context) {
+
+	categories, err := usecase.GetOffers()
+	if err != nil {
+		errorRes := response.ClientResponse(http.StatusBadRequest, "fields provided are in wrong format", nil, err.Error())
+		c.JSON(http.StatusBadRequest, errorRes)
+		return
+	}
+
+	successRes := response.ClientResponse(http.StatusOK, "Successfully got all offers", categories, nil)
+	c.JSON(http.StatusOK, successRes)
+
+}
+
+// @Summary Add  Product Offer
+// @Description Add a new Offer for a product by specifying a limit
+// @Tags Admin Offer Management
+// @Accept json
+// @Produce json
+// @Security Bearer
+// @Param	id	query	string	true	"id"
+// @Success 200 {object} response.Response{}
+// @Failure 500 {object} response.Response{}
+// @Router /admin/offer/product-offer   [DELETE]
+func ExpireProductOffer(c *gin.Context) {
+	id, err := strconv.Atoi(c.Query("id"))
+	if err != nil {
+		errorRes := response.ClientResponse(http.StatusBadRequest, "fields provided are in wrong format", nil, err.Error())
+		c.JSON(http.StatusBadRequest, errorRes)
+		return
+	}
+
+	if err := usecase.MakeOfferExpire(id); err != nil {
+		errorRes := response.ClientResponse(http.StatusBadRequest, "Coupon cannot be made invalid", nil, err.Error())
+		c.JSON(http.StatusBadRequest, errorRes)
+		return
+	}
+
+	successRes := response.ClientResponse(http.StatusOK, "Successfully made Coupon as invaid", nil, nil)
+	c.JSON(http.StatusOK, successRes)
+
+}
+
+// @Summary Add Category Offer
+// @Description Add a new Offer for a product by specifying a limit
+// @Tags Admin Offer Management
+// @Accept json
+// @Produce json
+// @Security Bearer
+// @Param coupon body models.CategoryOfferReceiver  true "Add new category Offer"
+// @Success 200 {object} response.Response{}
+// @Failure 500 {object} response.Response{}
+// @Router /admin/offer/category-offer [POST]
 func AddCategoryOffer(c *gin.Context) {
 
 	var categoryOffer models.CategoryOfferReceiver
@@ -82,11 +129,6 @@ func AddCategoryOffer(c *gin.Context) {
 	err = usecase.AddCategoryOffer(categoryOffer)
 
 	if err != nil {
-		if errors.Is(err,errors.New("the offer already exists")) {
-			errRes := response.ClientResponse(http.StatusForbidden, "could not add offers", nil, err.Error())
-			c.JSON(http.StatusForbidden, errRes)
-			return
-		}
 		errRes := response.ClientResponse(http.StatusInternalServerError, "could not add offer", nil, err.Error())
 		c.JSON(http.StatusInternalServerError, errRes)
 		return
@@ -94,5 +136,57 @@ func AddCategoryOffer(c *gin.Context) {
 
 	successRes := response.ClientResponse(http.StatusCreated, "Successfully added offer", nil, nil)
 	c.JSON(http.StatusCreated, successRes)
+
+}
+
+// @Summary Add  Category Offer
+// @Description Add a new Offer for a category by specifying a limit
+// @Tags Admin Offer Management
+// @Accept json
+// @Produce json
+// @Security Bearer
+// @Success 200 {object} response.Response{}
+// @Failure 500 {object} response.Response{}
+// @Router /admin/offer/category-offer [GET]
+func GetCategoryOffer(c *gin.Context) {
+
+	categories, err := usecase.GetCategoryOffer()
+	if err != nil {
+		errorRes := response.ClientResponse(http.StatusBadRequest, "fields provided are in wrong format", nil, err.Error())
+		c.JSON(http.StatusBadRequest, errorRes)
+		return
+	}
+
+	successRes := response.ClientResponse(http.StatusOK, "Successfully got all offers", categories, nil)
+	c.JSON(http.StatusOK, successRes)
+
+}
+
+// @Summary Add  Category Offer
+// @Description Add a new Offer for a category by specifying a limit
+// @Tags Admin Offer Management
+// @Accept json
+// @Produce json
+// @Security Bearer
+// @Param	id	query	string	true	"id"
+// @Success 200 {object} response.Response{}
+// @Failure 500 {object} response.Response{}
+// @Router /admin/offer/category-offer   [DELETE]
+func ExpireCategoryOffer(c *gin.Context) {
+	id, err := strconv.Atoi(c.Query("id"))
+	if err != nil {
+		errorRes := response.ClientResponse(http.StatusBadRequest, "fields provided are in wrong format", nil, err.Error())
+		c.JSON(http.StatusBadRequest, errorRes)
+		return
+	}
+
+	if err := usecase.ExpireCategoryOffer(id); err != nil {
+		errorRes := response.ClientResponse(http.StatusBadRequest, "Coupon cannot be made invalid", nil, err.Error())
+		c.JSON(http.StatusBadRequest, errorRes)
+		return
+	}
+
+	successRes := response.ClientResponse(http.StatusOK, "Successfully made Coupon as invaid", nil, nil)
+	c.JSON(http.StatusOK, successRes)
 
 }
